first layout implementation

--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -5,10 +5,12 @@
 
 		<!-- info track wrapper -->
 		<div id="info-track-wrapper">
-		{{title}}<br>
-		{{artist}}<br>
-		{{album}}<br>
-		{{length}}<br>
+			<div id="info-track">
+			{{title}}<br>
+			{{artist}}<br>
+			{{album}}<br>
+			{{length}}<br>
+			</div>
 		</div>
 		<!-- info track wrapper END -->
 
@@ -20,7 +22,7 @@
 
 		<!-- downvote wrapper -->
 		<div id="downvote-wrapper">
-		downvote
+		D
 		</div>
 		<!-- downvote wrapper END -->
 
