--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -12,25 +12,21 @@
 			{{length}}<br>
 			</div>
 		</div>
-		<!-- info track wrapper END -->
 
 		<!-- dj wrapper -->
 		<div id="dj-wrapper">
-			<div id="dj-image" v-style="background-image: 'url(' + image + ')';"></div>
+			<div class="dj-image" v-style="background-image: 'url(' + image + ')';"></div>
 		</div>
-		<!-- dj wrapper END -->
-
+		
 		<!-- downvote wrapper -->
 		<div id="downvote-wrapper">
 		D
 		</div>
-		<!-- downvote wrapper END -->
 
 		<!-- system info wrapper -->
 		<div id="system-info-wrapper">
 		I: {{internetAccess}} U: {{users}}
 		</div>
-		<!-- system info wrapper END -->
 
 	</div>
 
@@ -58,4 +54,3 @@
 		</div>
 
 </div>
-<!-- wrapper home END
