--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -18,14 +18,13 @@
 			<div class="dj-image" v-style="background-image: 'url(' + image + ')';"></div>
 		</div>
 		
-		<!-- downvote wrapper -->
-		<div id="downvote-wrapper">
-		D
-		</div>
-
 		<!-- system info wrapper -->
 		<div id="system-info-wrapper">
-		I: {{internetAccess}} U: {{users}}
+			<div id="downvote-button">D</div>
+			<div id="downvote-response-message">{{downvoteResponseMessage}}</div>
+			<div id="system-info-text">
+			I: {{internetAccess}} U: {{users}}
+			</div>
 		</div>
 
 	</div>
